--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <h2>Formação Acadêmica</h2>
         <ul>
-            <li>Bacharelado em Sistemas e Mídidas Digitais (cursando) <br />
+            <li>Bacharelado em Sistemas e Mídias Digitais (cursando) <br />
             Universidade Federal do Ceará - UFC</li>
             <li>Técnico em Administração (2021-2023) <br />
             Escola Estadual de Educação Profissional Professor Antonio Valmir da Silva</li>
