--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         17 anos, brasileira <br />
         Email: yasminnevesvale@gmail.com <br />
         Telefone: 85 982026718 <br />
-        <a href="https://maps.app.goo.gl/HgHiFFrPBPfgzLZa6">Minha localização</a>
+        <a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.73h,75.29t/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656?hl=ja&entry=ttu">Localização</a>
         </p>
     <img src="./images/eu.jpg" height="200">
     <hr />
